# chatbot

./: README.md  chat.py  clone.py  common.py  config.py  list_voice.py  llm.py  main.py  pyproject.toml  tts.py
example/: asr.py  edge_tts.py  edge_tts2.py
