[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.82.1",
    "requests>=2.32.3",
]


[tool.ruff]
fix = true
line-length = 120  # YOLO
src = ["src", "tests"]
target-version = "py310"

[tool.ruff.format]
indent-style = "space"  # Like Black, indent with spaces, rather than tabs.
line-ending = "auto"  # Like Black, automatically detect the appropriate line ending.
quote-style = "double"  # Like Black, use double quotes for strings.
skip-magic-trailing-comma = false  # Like Black, respect magic trailing commas.

[tool.ruff.lint]
ignore = [
    "B905",  # `zip()` without an explicit `strict=` parameter
    "E402",  # module level import not at top of file
    "E501",  # conflicts with black
    "N801",  # enable lower case for all module names
]
select = [
    "B",  # flake8-bugbear
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "PTH",  # flake8-pathlib
    "UP",  # pyupgrade
    "W",  # pycodestyle warnings
]
unfixable = [
    "B018",  # automatic fix might obscure issue
    "F601",  # automatic fix might obscure issue
    "F602",  # automatic fix might obscure issue
    "UP036",  # sometimes it's better to just noqa this
]

[tool.ruff.lint.isort]
forced-separate = ["tests"]
known-first-party = ["uglychain"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401", "F403"]
"/*.py" = ["F401", "F403"]
"tests/*" = ["B"]

[tool.ruff.lint.pydocstyle]
convention = "google"